test/files/neg/implicit-ambiguous-invalid.check
implicit-ambiguous-invalid.scala:5: warning: Invalid @implicitAmbiguous message for method neqAmbig1 in object Test:
The type parameter B referenced in the message of the @implicitAmbiguous annotation is not visible at method neqAmbig1.
Note that the following type parameters are visible at neqAmbig1: A (in method neqAmbig1)
  implicit def neqAmbig1[A] : A =!= A = null
               ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
